# rust-tmpl

./: LICENSE  README.md  template.toml
template/: Cargo.toml  LICENSE  README.md
template/.cargo/: config
template/src/: main.rs
