[package]
name = "{{project_name}}"
version = "{{version}}"
authors = ["{{author}} <{{author_email}}>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f1xx-hal = { version = "0.7", features = ["rt", "stm32f103" ] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.6", features = ["device"] }
panic-semihosting = "0.5"
